--- a/.github/workflows/pr-jobs-linux.yml
+++ b/.github/workflows/pr-jobs-linux.yml
@@ -23,89 +23,57 @@ jobs:
       - name: Simple source code checks
         run: make check-sources
   # ========================= Linux With Tests ======================== #
-#  build-linux:
-#    runs-on: ubuntu-latest
-#    timeout-minutes: 120
-#    steps:
-#      - uses: actions/checkout@v4.1.0
-#      - uses: "./.github/actions/pre-steps"
-#      - uses: "./.github/actions/install-gflags"
-#      - run: echo "JAVA_HOME=${JAVA_HOME}"
-#      - run: echo 'export PATH=/usr/lib/jvm/temurin-11-jdk-amd64/bin:$PATH' >> $GITHUB_PATH
-#      - run: export JAVA_HOME=${JAVA_HOME}
-#      - run: export PATH=${JAVA_HOME}/bin:$PATH
-#      - run: echo "$PATH"
-#      - run: make V=1 J=8 -j8 check
-#      - uses: "./.github/actions/post-steps"
-#  build-linux-cmake-with-folly:
-#    runs-on: ubuntu-latest
-#    timeout-minutes: 120
-#    steps:
-#      - uses: actions/checkout@v4.1.0
-#      - uses: "./.github/actions/pre-steps"
-#      - uses: "./.github/actions/install-gflags"
-#      - uses: "./.github/actions/setup-folly"
-#      - uses: "./.github/actions/build-folly"
-#      - run: echo "JAVA_HOME=${JAVA_HOME}"
-#      - run: echo 'export PATH=$JAVA_HOME/bin:$PATH' >> $GITHUB_PATH
-#      - run: export PATH=$JAVA_HOME/bin:$PATH
-#      - run: echo "$PATH"
-#      - uses: actions/checkout@v4.1.0
-#      - run: "(mkdir build && cd build && cmake -DUSE_FOLLY=1 -DWITH_GFLAGS=1 -DROCKSDB_BUILD_SHARED=0 .. && make V=1 -j8 && ctest -j8)"
-#      - uses: "./.github/actions/post-steps"
-#  # ======================== Linux No Test Runs ======================= #
-#  build-linux-release:
-#    runs-on: ubuntu-latest
-#    timeout-minutes: 120
-#    steps:
-#      - uses: actions/checkout@v4.1.0
-#      - uses: "./.github/actions/install-gflags"
-#      - run: echo "JAVA_HOME=${JAVA_HOME}"
-#      - run: echo 'export PATH=$JAVA_HOME/bin:$PATH' >> $GITHUB_PATH
-#      - run: make V=1 -j32 LIB_MODE=shared release
-#      - run: ls librocksdb.so
-#      - run: "./db_stress --version"
-#      - run: make clean
-#      - run: make V=1 -j32 release
-#      - run: ls librocksdb.a
-#      - run: "./db_stress --version"
-#      - run: make clean
-#      - run: sudo apt-get remove -y libgflags-dev
-#      - run: make V=1 -j32 LIB_MODE=shared release
-#      - run: ls librocksdb.so
-#      - run: if ./db_stress --version; then false; else true; fi
-#      - run: make clean
-#      - run: make V=1 -j32 release
-#      - run: ls librocksdb.a
-#      - run: if ./db_stress --version; then false; else true; fi
-#      - uses: "./.github/actions/post-steps"
-#  # ============================ Java Jobs ============================ #
-#  build-linux-java:
-#    runs-on: ubuntu-latest
-#    container: evolvedbinary/rocksjava:centos6_x64-be
-#    steps:
-#      # The docker image is intentionally based on an OS that has an older GLIBC version.
-#      # That GLIBC is incompatibile with GitHub's actions/checkout. Thus we implement a manual checkout step.
-#      - name: Checkout
-#        env:
-#          GH_TOKEN: ${{ github.token }}
-#        run: |
-#          chown `whoami` . || true
-#          git clone --no-checkout https://oath2:$GH_TOKEN@github.com/${{ github.repository }}.git .
-#          git -c protocol.version=2 fetch --update-head-ok --no-tags --prune --no-recurse-submodules --depth=1 origin +${{ github.sha }}:${{ github.ref }}
-#          git checkout --progress --force ${{ github.ref }}
-#          git log -1 --format='%H'
-#      - uses: "./.github/actions/pre-steps"
-#      - name: Set Java Environment
-#        run: |-
-#          echo "JAVA_HOME=${JAVA_HOME}"
-#          echo 'export PATH=$JAVA_HOME/bin:$PATH' >> $GITHUB_PATH
-#          which java && java -version
-#          which javac && javac -version
-#      - name: Test RocksDBJava
-#        run: scl enable devtoolset-7 'make V=1 J=8 -j8 jtest'
-#    # NOTE: post-steps skipped because of compatibility issues with docker image
-  build-linux-java-static:
+  build-linux:
+    runs-on: ubuntu-latest
+    timeout-minutes: 120
+    steps:
+      - uses: actions/checkout@v4.1.0
+      - uses: "./.github/actions/pre-steps"
+      - uses: "./.github/actions/install-gflags"
+      - run: echo "JAVA_HOME=${JAVA_HOME}"
+      - run: DISABLE_WARNING_AS_ERROR=1 make V=1 J=8 -j8 check
+      - uses: "./.github/actions/post-steps"
+  build-linux-cmake-with-folly:
+    runs-on: ubuntu-latest
+    timeout-minutes: 120
+    steps:
+      - uses: actions/checkout@v4.1.0
+      - uses: "./.github/actions/pre-steps"
+      - uses: "./.github/actions/install-gflags"
+      - uses: "./.github/actions/setup-folly"
+      - uses: "./.github/actions/build-folly"
+      - run: echo "JAVA_HOME=${JAVA_HOME}"
+      - uses: actions/checkout@v4.1.0
+      - run: "(mkdir build && cd build && cmake -DUSE_FOLLY=1 -DWITH_GFLAGS=1 -DROCKSDB_BUILD_SHARED=0 .. && DISABLE_WARNING_AS_ERROR=1 make V=1 -j8 && ctest -j8)"
+      - uses: "./.github/actions/post-steps"
+  # ======================== Linux No Test Runs ======================= #
+  build-linux-release:
+    runs-on: ubuntu-latest
+    timeout-minutes: 120
+    steps:
+      - uses: actions/checkout@v4.1.0
+      - uses: "./.github/actions/install-gflags"
+      - run: echo "JAVA_HOME=${JAVA_HOME}"
+      - run: echo 'export PATH=$JAVA_HOME/bin:$PATH' >> $GITHUB_PATH
+      - run: DISABLE_WARNING_AS_ERROR=1 make V=1 -j32 LIB_MODE=shared release
+      - run: ls librocksdb.so
+      - run: "./db_stress --version"
+      - run: DISABLE_WARNING_AS_ERROR=1 make clean
+      - run: DISABLE_WARNING_AS_ERROR=1 make V=1 -j32 release
+      - run: ls librocksdb.a
+      - run: "./db_stress --version"
+      - run: DISABLE_WARNING_AS_ERROR=1 make clean
+      - run: sudo apt-get remove -y libgflags-dev
+      - run: DISABLE_WARNING_AS_ERROR=1 make V=1 -j32 LIB_MODE=shared release
+      - run: ls librocksdb.so
+      - run: if ./db_stress --version; then false; else true; fi
+      - run: DISABLE_WARNING_AS_ERROR=1 make clean
+      - run: DISABLE_WARNING_AS_ERROR=1 make V=1 -j32 release
+      - run: ls librocksdb.a
+      - run: if ./db_stress --version; then false; else true; fi
+      - uses: "./.github/actions/post-steps"
+  # ============================ Java Jobs ============================ #
+  build-linux-java:
     runs-on: ubuntu-latest
     container: evolvedbinary/rocksjava:centos6_x64-be
     steps:
@@ -127,96 +95,118 @@ jobs:
           echo 'export PATH=$JAVA_HOME/bin:$PATH' >> $GITHUB_PATH
           which java && java -version
           which javac && javac -version
-      - name: Build RocksDBJava Static Library
-        run: scl enable devtoolset-7 'make V=1 J=8 -j8 rocksdbjavastatic'
+      - name: Test RocksDBJava
+        run: scl enable devtoolset-7 'DISABLE_WARNING_AS_ERROR=1 make V=1 J=8 -j8 jtest'
     # NOTE: post-steps skipped because of compatibility issues with docker image
-#
-#  # ========================= MacOS build only ======================== #
-#  build-macos:
-#    runs-on: macos-13
-#    timeout-minutes: 120
-#    env:
-#      ROCKSDB_DISABLE_JEMALLOC: 1
-#    steps:
-#      - uses: actions/checkout@v4.1.0
-#      - uses: maxim-lobanov/setup-xcode@v1.6.0
-#        with:
-#          xcode-version: 14.3.1
-#      - uses: "./.github/actions/increase-max-open-files-on-macos"
-#      - uses: "./.github/actions/install-gflags-on-macos"
-#      - uses: "./.github/actions/pre-steps-macos"
-#      - name: Build
-#        run: ulimit -S -n `ulimit -H -n` && make V=1 J=16 -j16 all
-#      - uses: "./.github/actions/post-steps"
-#  # ========================= MacOS with Tests ======================== #
-#  build-macos-cmake:
-#    runs-on: macos-13
-#    timeout-minutes: 120
-#    strategy:
-#      matrix:
-#        run_even_tests: [true]
-#    steps:
-#      - uses: actions/checkout@v4.1.0
-#      - uses: maxim-lobanov/setup-xcode@v1.6.0
-#        with:
-#          xcode-version: 14.3.1
-#      - uses: "./.github/actions/increase-max-open-files-on-macos"
-#      - uses: "./.github/actions/install-gflags-on-macos"
-#      - uses: "./.github/actions/pre-steps-macos"
-#      - name: cmake generate project file
-#        run: ulimit -S -n `ulimit -H -n` && mkdir build && cd build && cmake -DWITH_GFLAGS=1 ..
-#      - name: Build tests
-#        run: cd build && make V=1 -j16
-#      - name: Run even tests
-#        run: ulimit -S -n `ulimit -H -n` && cd build && ctest -j16 -I 0,,2
-#        if: ${{ matrix.run_even_tests }}
-#      - name: Run odd tests
-#        run: ulimit -S -n `ulimit -H -n` && cd build && ctest -j16 -I 1,,2
-#        if: ${{ ! matrix.run_even_tests  }}
-#      - uses: "./.github/actions/post-steps"
-#  # ========================= MacOS with java ======================== #
-#  build-macos-java:
-#    runs-on: macos-13
-#    env:
-#      JAVA_HOME: "/Library/Java/JavaVirtualMachines/liberica-jdk-8.jdk/Contents/Home"
-#      ROCKSDB_DISABLE_JEMALLOC: 1
-#    steps:
-#      - uses: actions/checkout@v4.1.0
-#      - uses: maxim-lobanov/setup-xcode@v1.6.0
-#        with:
-#          xcode-version: 14.3.1
-#      - uses: "./.github/actions/increase-max-open-files-on-macos"
-#      - uses: "./.github/actions/install-gflags-on-macos"
-#      - uses: "./.github/actions/install-jdk8-on-macos"
-#      - uses: "./.github/actions/pre-steps-macos"
-#      - name: Set Java Environment
-#        run: |-
-#          echo "JAVA_HOME=${JAVA_HOME}"
-#          echo 'export PATH=$JAVA_HOME/bin:$PATH' >> $GITHUB_PATH
-#          which java && java -version
-#          which javac && javac -version
-#      - name: Test RocksDBJava
-#        run: make V=1 J=16 -j16 jtest
-#      - uses: "./.github/actions/post-steps"
-#  build-macos-java-static:
-#    runs-on: macos-13
-#    env:
-#      JAVA_HOME: "/Library/Java/JavaVirtualMachines/liberica-jdk-8.jdk/Contents/Home"
-#    steps:
-#      - uses: actions/checkout@v4.1.0
-#      - uses: maxim-lobanov/setup-xcode@v1.6.0
-#        with:
-#          xcode-version: 14.3.1
-#      - uses: "./.github/actions/increase-max-open-files-on-macos"
-#      - uses: "./.github/actions/install-gflags-on-macos"
-#      - uses: "./.github/actions/install-jdk8-on-macos"
-#      - uses: "./.github/actions/pre-steps-macos"
-#      - name: Set Java Environment
-#        run: |-
-#          echo "JAVA_HOME=${JAVA_HOME}"
-#          echo 'export PATH=$JAVA_HOME/bin:$PATH' >> $GITHUB_PATH
-#          which java && java -version
-#          which javac && javac -version
-#      - name: Build RocksDBJava x86 and ARM Static Libraries
-#        run: make V=1 J=16 -j16 rocksdbjavastaticosx
-#      - uses: "./.github/actions/post-steps"
+  build-linux-java-static:
+    runs-on: ubuntu-latest
+    container: evolvedbinary/rocksjava:centos6_x64-be
+    steps:
+      # The docker image is intentionally based on an OS that has an older GLIBC version.
+      # That GLIBC is incompatibile with GitHub's actions/checkout. Thus we implement a manual checkout step.
+      - name: Checkout
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          chown `whoami` . || true
+          git clone --no-checkout https://oath2:$GH_TOKEN@github.com/${{ github.repository }}.git .
+          git -c protocol.version=2 fetch --update-head-ok --no-tags --prune --no-recurse-submodules --depth=1 origin +${{ github.sha }}:${{ github.ref }}
+          git checkout --progress --force ${{ github.ref }}
+          git log -1 --format='%H'
+      - uses: "./.github/actions/pre-steps"
+      - name: Set Java Environment
+        run: |-
+          echo "JAVA_HOME=${JAVA_HOME}"
+          which java && java -version
+          which javac && javac -version
+      - name: Build RocksDBJava Static Library
+        run: scl enable devtoolset-7 'DISABLE_WARNING_AS_ERROR=1 make V=1 J=8 -j8 rocksdbjavastatic'
+    # NOTE: post-steps skipped because of compatibility issues with docker image
+
+  # ========================= MacOS build only ======================== #
+  build-macos:
+    runs-on: macos-13
+    timeout-minutes: 120
+    env:
+      ROCKSDB_DISABLE_JEMALLOC: 1
+    steps:
+      - uses: actions/checkout@v4.1.0
+      - uses: maxim-lobanov/setup-xcode@v1.6.0
+        with:
+          xcode-version: 14.3.1
+      - uses: "./.github/actions/increase-max-open-files-on-macos"
+      - uses: "./.github/actions/install-gflags-on-macos"
+      - uses: "./.github/actions/pre-steps-macos"
+      - name: Build
+        run: ulimit -S -n `ulimit -H -n` && DISABLE_WARNING_AS_ERROR=1 make V=1 J=16 -j16 all
+      - uses: "./.github/actions/post-steps"
+  # ========================= MacOS with Tests ======================== #
+  build-macos-cmake:
+    runs-on: macos-13
+    timeout-minutes: 120
+    strategy:
+      matrix:
+        run_even_tests: [true]
+    steps:
+      - uses: actions/checkout@v4.1.0
+      - uses: maxim-lobanov/setup-xcode@v1.6.0
+        with:
+          xcode-version: 14.3.1
+      - uses: "./.github/actions/increase-max-open-files-on-macos"
+      - uses: "./.github/actions/install-gflags-on-macos"
+      - uses: "./.github/actions/pre-steps-macos"
+      - name: cmake generate project file
+        run: ulimit -S -n `ulimit -H -n` && mkdir build && cd build && cmake -DWITH_GFLAGS=1 ..
+      - name: Build tests
+        run: cd build && DISABLE_WARNING_AS_ERROR=1 make V=1 -j16
+      - name: Run even tests
+        run: ulimit -S -n `ulimit -H -n` && cd build && ctest -j16 -I 0,,2
+        if: ${{ matrix.run_even_tests }}
+      - name: Run odd tests
+        run: ulimit -S -n `ulimit -H -n` && cd build && ctest -j16 -I 1,,2
+        if: ${{ ! matrix.run_even_tests  }}
+      - uses: "./.github/actions/post-steps"
+  # ========================= MacOS with java ======================== #
+  build-macos-java:
+    runs-on: macos-13
+    env:
+      JAVA_HOME: "/Library/Java/JavaVirtualMachines/liberica-jdk-8.jdk/Contents/Home"
+      ROCKSDB_DISABLE_JEMALLOC: 1
+    steps:
+      - uses: actions/checkout@v4.1.0
+      - uses: maxim-lobanov/setup-xcode@v1.6.0
+        with:
+          xcode-version: 14.3.1
+      - uses: "./.github/actions/increase-max-open-files-on-macos"
+      - uses: "./.github/actions/install-gflags-on-macos"
+      - uses: "./.github/actions/install-jdk8-on-macos"
+      - uses: "./.github/actions/pre-steps-macos"
+      - name: Set Java Environment
+        run: |-
+          echo "JAVA_HOME=${JAVA_HOME}"
+          which java && java -version
+          which javac && javac -version
+      - name: Test RocksDBJava
+        run: DISABLE_WARNING_AS_ERROR=1 make V=1 J=16 -j16 jtest
+      - uses: "./.github/actions/post-steps"
+  build-macos-java-static:
+    runs-on: macos-13
+    env:
+      JAVA_HOME: "/Library/Java/JavaVirtualMachines/liberica-jdk-8.jdk/Contents/Home"
+    steps:
+      - uses: actions/checkout@v4.1.0
+      - uses: maxim-lobanov/setup-xcode@v1.6.0
+        with:
+          xcode-version: 14.3.1
+      - uses: "./.github/actions/increase-max-open-files-on-macos"
+      - uses: "./.github/actions/install-gflags-on-macos"
+      - uses: "./.github/actions/install-jdk8-on-macos"
+      - uses: "./.github/actions/pre-steps-macos"
+      - name: Set Java Environment
+        run: |-
+          echo "JAVA_HOME=${JAVA_HOME}"
+          which java && java -version
+          which javac && javac -version
+      - name: Build RocksDBJava x86 and ARM Static Libraries
+        run: DISABLE_WARNING_AS_ERROR=1 make V=1 J=16 -j16 rocksdbjavastaticosx
+      - uses: "./.github/actions/post-steps"
